Fix PlayStation WPE build of WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=269247

Reviewed by Fujii Hironori.

Add stubs for the accessibility within the InjectedBundle for PlayStation. Fix
a typo in `AccessibilityUIElementWin.cpp` while there.

Include additional libWPE files to the build and guard `ENABLE(WPE_PLATFORM)`.

* Tools/WebKitTestRunner/InjectedBundle/playstation/AccessibilityControllerPlayStation.cpp: Added.
* Tools/WebKitTestRunner/InjectedBundle/playstation/AccessibilityUIElementPlayStation.cpp: Copied from Tools\WebKitTestRunner\InjectedBundle\win\AccessibilityUIElementWin.cpp.
* Tools/WebKitTestRunner/InjectedBundle/win/AccessibilityUIElementWin.cpp:
* Tools/WebKitTestRunner/PlatformPlayStation.cmake:
* Tools/WebKitTestRunner/libwpe/EventSenderProxyLibWPE.cpp:
* Tools/WebKitTestRunner/libwpe/PlatformWebViewLibWPE.cpp:

Canonical link: https://commits.webkit.org/274509@main