Tools/WebKitTestRunner/PlatformPlayStation.cmake
@@ -1,7 +1,9 @@
 list(APPEND WebKitTestRunner_SOURCES
     cairo/TestInvocationCairo.cpp
 
+    libwpe/EventSenderProxyClientLibWPE.cpp
     libwpe/EventSenderProxyLibWPE.cpp
+    libwpe/PlatformWebViewClientLibWPE.cpp
     libwpe/PlatformWebViewLibWPE.cpp
 
     playstation/TestControllerPlayStation.cpp
@@ -10,6 +12,7 @@ list(APPEND WebKitTestRunner_SOURCES
 )
 
 list(APPEND WebKitTestRunner_INCLUDE_DIRECTORIES
+    ${WebKitTestRunner_DIR}/libwpe
     ${WebKitTestRunner_DIR}/playstation
 )
 
@@ -19,6 +22,8 @@ list(APPEND WebKitTestRunner_PRIVATE_LIBRARIES
 )
 
 list(APPEND TestRunnerInjectedBundle_SOURCES
+    InjectedBundle/playstation/AccessibilityControllerPlayStation.cpp
+    InjectedBundle/playstation/AccessibilityUIElementPlayStation.cpp
     InjectedBundle/playstation/ActivateFontsPlayStation.cpp
     InjectedBundle/playstation/InjectedBundlePlayStation.cpp
     InjectedBundle/playstation/TestRunnerPlayStation.cpp
